[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
dotenv = "0.15"
image = "0.24"  # For watermarking